--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>My Projects</h1>
 <ul>
-  <li><a href="./rides_to/">Project 1</a></li>
-  <li><a href="./rides_back/">Project 2</a></li>
+  <li><a href="./rides_to/">Rides to</a></li>
+  <li><a href="./rides_back/">Rides back</a></li>
 </ul>
