--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>My Projects</h1>
+<h1>My Projects!</h1>
 <ul>
   <li><a href="./maps/rides_to/">Rides to</a></li>
   <li><a href="./maps/rides_back/">Rides back</a></li>
