update main landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>My Projects!</h1>
+<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-14-2025 17-30-04 CST</h1>
 <ul>
-  <li><a href="./maps/rides_to/">Rides to</a></li>
-  <li><a href="./maps/rides_back/">Rides back</a></li>
+<li><a href="./maps/rides_to/">Rides to</a></li>
+<li><a href="./maps/rides_back/">Rides back</a></li>
 </ul>
