add the excel file to the landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-14-2025 17-45-00 CST</h1>
+<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-14-2025 18-01-50 CST</h1>
 <ul>
-<li><a href="./maps/rides_to/">Rides to</a></li>
-<li><a href="./maps/rides_back/">Rides back</a></li>
+<li><a href="./maps/rides_to/">Rides to map</a></li>
+<li><a href="./maps/rides_back/">Rides back map</a></li>
 </ul>
+<iframe height="600" src="assignments_table.html" style="border: 1px solid #ccc;" width="100%"></iframe>
