update map by adding church destination marker and update readme

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 
-<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-14-2025 18-17-23 CST</h1>
+<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-14-2025 18-17-30 CST</h1>
 <ul>
 <li><a href="./maps/rides_to/">Rides to map</a></li>
 <li><a href="./maps/rides_back/">Rides back map</a></li>
 </ul>
 
 <div style="z-index: 9999; display: flex; gap: 10px;">
-    <a href="assignments_05-14-2025 18-17-23.xlsx" download>
+    <a href="assignments_05-14-2025 18-17-30.xlsx" download>
         <button style="margin: 10px; padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;">
             Download Assignments as Excel
         </button>
     </a>
 </div>
 
-<iframe height="2000" src="assignments_table.html" style="border: 1px solid #ccc;" width="100%"></iframe>
+<div style="overflow-x: auto; -webkit-overflow-scrolling: touch; touch-action: pan-x">
+<iframe
+  src="assignments_table.html"
+  width="100%"
+  height="2000"
+  style="min-width: 1000px; border: 1px solid #ccc;"
+  scrolling="yes"
+></iframe>
+</div>
