--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 
-<h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 05-31-2025 00-16-22 CST</h1>
-<ul>
-<li><a href="./maps/rides_to/">Rides to map</a></li>
-<li><a href="./maps/rides_back/">Rides back map</a></li>
-</ul>
+    <h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 09-05-2025 14-50-52 CST</h1>
+    <ul>
+    <li><a href="./maps/rides_to/">Rides to map</a></li>
+    <li><a href="./maps/rides_back/">Rides back map</a></li>
+    </ul>
 
-<div style="overflow-x: auto; -webkit-overflow-scrolling: touch; touch-action: pan-x">
-<iframe
-  src="assignments_table.html"
-  width="100%"
-  height="2000"
-  style="min-width: 1000px; border: 1px solid #ccc;"
-  scrolling="yes"
-></iframe>
-</div>
+    <div style="z-index: 9999; display: flex; gap: 10px;">
+        <a href="assignments_09-05-2025 14-50-52.xlsx" download>
+            <button style="margin: 10px; padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;">
+                Download Assignments as Excel
+            </button>
+        </a>
+    </div>
+
+    <div style="overflow-x: auto; -webkit-overflow-scrolling: touch; touch-action: pan-x">
+    <iframe
+    src="assignments_table.html"
+    width="100%"
+    height="2000"
+    style="min-width: 1000px; border: 1px solid #ccc;"
+    scrolling="yes"
+    ></iframe>
+    </div>
+    
