--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
-    <h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 09-13-2025 11-01-00 CST</h1>
+    <h1>Click on the links to show the map of partitions for this week's driver/rider assignments. Updated 09-13-2025 11-04-14 CST</h1>
     <ul>
     <li><a href="./maps/rides_to/">Rides to map</a></li>
     <li><a href="./maps/rides_back/">Rides back map</a></li>
     </ul>
 
     <div style="z-index: 9999; display: flex; gap: 10px;">
-        <a href="assignments_09-13-2025 11-01-00.xlsx" download>
+        <a href="assignments_09-13-2025 11-04-14.xlsx" download>
             <button style="margin: 10px; padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;">
                 Download Assignments as Excel
             </button>
@@ -17,7 +17,7 @@
     <iframe
     src="assignments_table.html"
     width="100%"
-    height="2000"
+    height=" 100%"
     style="min-width: 1000px; border: 1px solid #ccc;"
     scrolling="yes"
     ></iframe>
