--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <iframe id="assignmentsFrame"
           src="assignments_table.html"
           width="100%"
-          style="min-width:1000px; border:1px solid #ccc; height:80vh;"  <!-- or omit and use JS below -->
+          style="min-width:1000px; border:1px solid #ccc; height:80vh;"
           loading="lazy"></iframe>
 </div>
 
-<script>
+<!-- <script>
   // Optional: auto-resize iframe to its content height (same-origin only)
   const fr = document.getElementById('assignmentsFrame');
   function resize() {
@@ -35,4 +35,4 @@
   }
   fr.addEventListener('load', resize);
   window.addEventListener('resize', () => setTimeout(resize, 100));
-</script>
+</script> -->
